[tool.poetry]
name = "lmproof"
version = "0.1.1b"
description = "Language model powered proof reader for correcting contextual errors in natural language."
authors = ["sai-prasanna <sai.r.prasanna@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/sai-prasanna/lmproof"
keywords = [
    "NLP", "language model", "Grammatical error correction"
]
# https://pypi.org/classifiers/
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
include = ["resources/*.txt"]

[tool.poetry.dependencies]
python = ">=3.7"
spacy = ">=2.0"
torch = ">=1.2.0"
lemminflect = ">=0.2.0"
transformers = ">=2.0"
symspellpy = ">=6.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^19.3b0"
mypy = "^0.740.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
