[tool.poetry]
name = "lmproof"
version = "0.4.0"
description = "Language model powered proof reader for correcting contextual errors in natural language."
authors = ["sai-prasanna <sai.r.prasanna@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/sai-prasanna/lmproof"
keywords = [
    "NLP", "language model", "Grammatical error correction"
]
# https://pypi.org/classifiers/
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
include = ["candidate_generator/resources/*.txt"]

[tool.poetry.dependencies]
python = ">=3.8"
spacy = { version = ">=2.0",  optional = true  }
torch = { version = ">=1.6.0",  optional = true  }
lemminflect = { version = ">=0.2.0",  optional = true }
transformers = { version = ">=3.0",  optional = true }
symspellpy = { version = ">=6.0",  optional = true }

[tool.poetry.extras]
all = ["spacy", "torch", "lemminflect", "transformers", "symspellpy"]

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^19.3b0"
mypy = "^0.740.0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
